--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,41 @@
 spring.application.name=user_profile_service
+# ===============================
+# = Spring Boot & MySQL Config =
+# ===============================
+
+# JDBC Connection
+spring.datasource.url=jdbc:mysql://localhost:3306/chess_profile_db?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+# Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ================================
+# = JPA / Hibernate Config       =
+# ================================
+
+# Auto-create tables
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+
+# Use MySQL dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Show SQL in console (dev only)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Naming strategy (optional, more readable table/column names)
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Disable default security password generation
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+
+# Security
+spring.security.filter.disabled=false
+
+debug=true
+server.port=8081
+app.base-url=http://localhost:${server.port}
+
